--- a/templates/article/index.html
+++ b/templates/article/index.html
@@ -18,14 +18,14 @@
 
 
 
-{% block headline %}
-    <h2 class="ico ico-articles">Liste des articles<h2>
+{% block breadcrumb %}
+    <li>Liste des articles</li>
 {% endblock %}
 
 
 
-{% block breadcrumb %}
-    <li>Liste des articles</li>
+{% block headline %}
+    <h2 class="ico-after ico-articles">Liste des articles</h2>
 {% endblock %}
 
 
