--- a/templates/article/member/base.html
+++ b/templates/article/member/base.html
@@ -3,17 +3,11 @@
 
 
 {% block title_base %}
-    &#183; Gestion des articles
+    &#183; Mes articles
 {% endblock %}
 
 
 
 {% block breadcrumb_base %}
-    <li><a href="{% url "zds.member.views.articles" %}">Gestion des articles</a></li>
-{% endblock %}
-
-
-
-{% block menu_article %}
-    current
+    <li><a href="{% url "zds.member.views.articles" %}">Mes articles</a></li>
 {% endblock %}
