--- a/assets/css/scss/_high-pixel-ratio.scss
+++ b/assets/css/scss/_high-pixel-ratio.scss
@@ -46,10 +46,10 @@
     }
 
     .main .content-container h2 {
-        &.ico-articles {
+        &.ico-articles:after {
             @include sprite-pos($sprite2x, 'articles', true);
         }
-        &.ico-tutorials {
+        &.ico-tutorials:after {
             @include sprite-pos($sprite2x, 'tutorials', true);
         }
     }
@@ -171,6 +171,10 @@
                 @include sprite-pos($sprite2x, 'pin-blue', true);
             }
         }
+        // TODO : faire une vraie icône beta
+        &.beta,
+        // TODO : faire une vraie icône move
+        &.move,
         &.arrow-right {
             &:after {
                 @include sprite-pos($sprite2x, 'arrow-right', true);
