--- a/templates/article/view.html
+++ b/templates/article/view.html
@@ -54,7 +54,7 @@
             <h3>Validation</h3>
             <ul>
                 <li>
-                    <a href="{{ article.get_absolute_url }}" class="ico-after arrow-right blue">
+                    <a href="{{ article.get_absolute_url }}" class="ico-after offline blue">
                         Version hors ligne
                     </a>
                 </li>
@@ -84,7 +84,7 @@
             <h3>Gestion</h3>
             <ul>
                 <li>
-                    <a href="{{ article.get_absolute_url }}" class="ico-after arrow-right blue">
+                    <a href="{{ article.get_absolute_url }}" class="ico-after offline blue">
                         Version hors ligne
                     </a>
                 </li>
