--- a/templates/tutorial/part/view_online.html
+++ b/templates/tutorial/part/view_online.html
@@ -52,7 +52,7 @@
         <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Administrations">
             <h3>Admin<span class="wide">istration</span></h3>
             <ul>
-                <li><a href="{{ part.tutorial.get_absolute_url }}">Version hors-ligne</a></li>
+                <li><a href="{{ part.tutorial.get_absolute_url }}" class="ico-after offline blue">Version hors-ligne</a></li>
             </ul>
         </div>
     {% endif %}
