--- a/templates/tutorial/tutorial/view_online.html
+++ b/templates/tutorial/tutorial/view_online.html
@@ -133,7 +133,7 @@
         <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Administration">
             <h3>Admin<span class="wide">istration</span></h3>
             <ul>
-                <li><a href="{{ tutorial.get_absolute_url }}" class="ico-after arrow-right blue">Version hors-ligne</a></li>
+                <li><a href="{{ tutorial.get_absolute_url }}" class="ico-after offline blue">Version hors-ligne</a></li>
                 <li><a href="{% url "zds.tutorial.views.history_validation" tutorial.pk %}" class="ico-after history blue">Historique validation</a></li>
                 <li><a href="{% url "zds.tutorial.views.invalid_tutorial" tutorial.pk %}" class="ico-after cross blue">Dépublier</a>
             </ul>
