Retrait des commentaires conditionnels pour IE

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,15 +9,12 @@
 
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js enable-mobile-menu lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js enable-mobile-menu lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js enable-mobile-menu lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js enable-mobile-menu"> <!--<![endif]-->
+<html class="no-js enable-mobile-menu">
 <head>
     <meta charset="utf-8">
 
     <title>
-        {% block title %}Sans nom{% endblock %}
+        {% block title %}{% endblock %}
         {% block title_base %}{% endblock %}
         &bull; ZesteDeSavoir
     </title>
