--- a/templates/misc/pagination.part.html
+++ b/templates/misc/pagination.part.html
@@ -1,5 +1,5 @@
 {% if pages|length > 1 %}
-    <ul class="pagination pagination-{{ position }}" data-test="{{ nb }}">
+    <ul class="pagination pagination-{{ position }}">
         {% ifnotequal nb 1 %}
             <li>
                 <a href="{{ topic.get_absolute_url }}?page={{ nb|add:"-1" }}">
