Corrections pour mobiles

--- a/assets/css/scss/_mobile-tablet.scss
+++ b/assets/css/scss/_mobile-tablet.scss
@@ -428,7 +428,7 @@
         }
     }
 
-    .main .content-container .forum-message {
+    .main .content-container .topic-message {
         padding: 20px 0;
 
         .user {
